[package]
name = "fectl"
version = "0.2.8"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Process management utility"
readme = "README.md"
keywords = []
homepage = "https://github.com/fafhrd91/fectl"
repository = "https://github.com/fafhrd91/fectl.git"
documentation = "https://fafhrd91.github.io/fafhrd91/fectl/"
categories = ["development-tools::ffi"]
license = "Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
build = "build.rs"

[[bin]]
name = "fectld"
path = "src/main.rs"

[[bin]]
name = "fectl"
path = "client/main.rs"

[dependencies]
actix = "0.5"

libc = "0.2"
nix = "0.9"
net2 = "0.2"
byteorder = "1.1"
chrono = "0.4"
boxfnonce = "*"

# tokio
bytes = "0.4"
mio = "0.6"
futures = "0.1"
tokio-core = "=0.1.12"
tokio-io = "=0.1.5"
tokio-signal = "=0.1.5"
tokio-uds = "=0.1.7"

# logging
time = "*"
log = "0.4"
env_logger = "0.5"

# cli
structopt = "0.2"
structopt-derive = "0.2"

# config
toml = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true
opt-level = 3
